kubernetes/webapp/k8s/deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: webapp-Deployment
spec:
  replicas: 3
  selector:
    matchlables:
    app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
    containers:
      - name: web-app
        image: revanthmallampalli/nginx:latest
        ports:
          - containerPort: 3000
